content page doc base
