# app/Models/LandingPageContent.php
@@ -5,8 +5,12 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Http\Resources\Json\JsonResource;
 
-class LandingPageContent
+/**
+ * @OA\Schema(type="object")
+ */
+class LandingPageContent extends JsonResource
 {
 
     public Collection $contents;
